# PIconnect

./: .env  .gitattributes  .gitignore  .pyup.yml  .readthedocs.yml  .travis.yml  AUTHORS.rst  CONTRIBUTING.rst  HISTORY.rst  LICENSE  LICENSE.txt  Makefile  PISeries.py  PIthon.py  Pipfile  README.rst  __init__.py  pyproject.toml  pyrightconfig.json  requirements.txt  requirements_dev.txt  setup.cfg  setup.py  tox.ini  travis_pypi_setup.py
.github/: ISSUE_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  codeql-analysis.yml  publish-pypi.yml
PIconnect/: AFSDK.py  PI.py  PIAF.py  PIAFAttribute.py  PIAFBase.py  PIConsts.py  PIData.py  PIPoint.py  __init__.py  _operators.py  _time.py  _utils.py  _version.py  config.py  time.py
PIconnect/_typing/: AF.py  Asset.py  Data.py  EventFrame.py  Generic.py  PI.py  Time.py  UnitsOfMeasure.py  __init__.py  _values.py
PIconnect/_typing/dotnet/: Data.py  Net.py  Security.py  __init__.py
PIconnect/test/: AFSDKmock.py  __init__.py  fakes.py  test_PI.py  test_PIAF.py  test_VirtualPIPoint_calculus.py
PIconnect/testing/: AF.py  Asset.py  Data.py  PI.py  Time.py  __init__.py
PIthon/: AFSDK.py  PI.py  PIAF.py  PIData.py  __init__.py  _operators.py
PIthon/test/: __init__.py  fakes.py  test_PI.py  test_PIAF.py  test_VirtualPIPoint_calculus.py
docs/: .gitignore  Makefile  PIconnect.AFSDK.rst  PIconnect.PI.rst  PIconnect.PIConsts.rst  PIconnect.PIData.rst  PIconnect.config.rst  PIconnect.rst  conf.py  copyright.rst  index.rst  installation.rst  make.bat  modules.rst  todo.rst  tutorials.rst  usage.rst
docs/_static/: custom.css
docs/api/: PIconnect.PIConsts.rst  PIconnect.PIData.rst  PIconnect._time.rst  PIconnect.time.rst  index.rst
docs/api/PI/: PIconnect.PI.rst
docs/api/PIAF/: PIconnect.PIAF.rst  PIconnect.PIAFAttribute.rst
docs/tutorials/: event_frames.rst  interpolated_values.rst  piaf.rst  piserver.rst  recorded_values.rst  summaries.rst  timezones.rst  update_value.rst
tests/: __init__.py  common.py  fakes.py  test_PI.py  test_PIAF.py  test_VirtualPIPoint_calculus.py  test_load_SDK.py  test_piconnect.py  test_pithon.py
