[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta:__legacy__"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra --durations=0 --cov-report xml:coverage.xml --cov PIconnect"

[tool.ruff]
line-length = 95
exclude = ["build", "dist", "docs", "venv"]

[tool.ruff.lint]
# See: https://docs.astral.sh/ruff/rules/
select = [
    "C4",  # flake8-comprehensions
    "E",   # pycodestyle
    "F",   # pyflakes
    "I",   # isort
    "PT",  # pytest-style
    "D",   # pydocstyle
    "B",   # flake8-bugbear
    "NPY", # numpy
]
# ignore = [
#     "D100",  # Missing docstring in public module
#     "E501",  # Line too long
#     "D101",  # Missing docstring in public class
#     "D102",  # Missing docstring in public method
#     "D103",  # Missing docstring in public function
#     "D104",  # Missing docstring in public package
#     "D105",  # Missing docstring in magic method
#     "D205",  # 1 blank line required between summary line and description
#     "D401",  # First line of docstring should be in imperative mood
#     "E741",  # Ambiguous variable name (such as "l")
# ]

[tool.ruff.lint.pydocstyle]
convention = "numpy"


[tool.bumpversion]
current_version = "0.11.1"
tag = false
commit = true
message = "chore: Bump version: {current_version} → {new_version}"

[[tool.bumpversion.files]]
search = "__version__ = \"{current_version}\""
replace = "__version__ = \"{new_version}\""
filename = "PIconnect/__init__.py"
