[metadata]
name = PIconnect
version = attr: PIconnect.__version__
description = Python connector to OSIsoft PI SDK
long_description = file: README.rst, HISTORY.rst
long_description_content_type = text/x-rst
keywords =
    OSIsoft
    PI
    Process Information
    PIconnect
license = MIT license
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Topic :: Database
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
author = Hugo Lapré
author_email = hugo.lapre@brabantwater.nl
url = https://github.com/Hugovdberg/PIconnect
platforms = any
project_urls =
    Bug Tracker = https://github.com/Hugovdberg/PIconnect/issues
    Documentation = https://piconnect.readthedocs.io/en/stable/


[options]
packages =
    PIconnect
    PIconnect._typing
    PIconnect._typing.dotnet
install_requires =
    pandas==2.2.3
    wrapt==1.17.0
    pythonnet==3.0.4
python_requires = >= 3.10
include_package_data = True
zip_safe=False


[bdist_wheel]
universal = 1

[nosetests]
with-coverage = 1
cover-html = 1
cover-package = PIconnect

[flake8]
exclude = docs

[aliases]
test = pytest
